force-app/main/default/objects/Bulk_Migration_Request__c/Bulk_Migration_Request__c.object-meta.xml
<CustomObject>
    <label>Bulk Migration Request</label>
    <nameField>
        <displayFormat>BMR-{0000}</displayFormat>
        <label>Bulk Migration Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Migration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>