force-app/main/default/objects/Bulk_Migration_Request__c/fields/Assignment_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>