force-app/main/default/objects/Bulk_Migration_Request__c/fields/Big_Desk_Sandbox_Type__c.field-meta.xml
<CustomField>
    <fullName>Big_Desk_Sandbox_Type__c</fullName>
    <description>contains &quot;Big Desk Type&quot; of related order</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Big Desk Sandbox Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>