force-app/main/default/objects/Bulk_Migration_Request__c/fields/Bulk_Migration_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Migration_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Migration Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bulk_Migration_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>