force-app/main/default/objects/Bulk_Migration_Request__c/fields/Bulk_Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Migration_Status__c</fullName>
    <label>Bulk Migration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>