force-app/main/default/objects/Bulk_Migration_Request__c/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bulk_Migration_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>