force-app/main/default/objects/Bulk_Migration_Request__c/fields/Final_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Check_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Check Date</label>
    <type>Date</type>
</CustomField>