force-app/main/default/objects/Bulk_Migration_Request__c/fields/Primary_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bulk Migration Requests</relationshipLabel>
    <relationshipName>Bulk_Migration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>