force-app/main/default/objects/Bulk_Migration_Request__c/fields/Requested_First_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_First_Check_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested First Check Date</label>
    <type>Date</type>
</CustomField>