force-app/main/default/objects/Bulk_Migration_Request__c/fields/Reseller_Account__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bulk Migration Requests</relationshipLabel>
    <relationshipName>Bulk_Migration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>