force-app/main/default/objects/Bulk_Migration_Request__c/fields/Total_Cancelled_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancelled_Orders__c</fullName>
    <label>Total Cancelled Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>