force-app/main/default/objects/Bulk_Migration_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Migration</fullName>
            </value>
            <value>
                <fullName>Multi-EIN</fullName>
            </value>
            <value>
                <fullName>Same Login</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>